--- a/index.html
+++ b/index.html
@@ -8,14 +8,9 @@
 </head>
 
 <body>
-  <nav></nav>
 
-  <header></header>
+  <article id="messages">
 
-  <article>
-    <header></header>
-    <section></section>
-    <footer></footer>
   </article>
 
   <footer></footer>
