added tablet styles

--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
   <footer></footer>
   <script src="load.js"></script>
   <script src="message.js"></script>
+  <script src="uPad.js"></script>
 </body>
 </html>
